--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   font-family: 'Inter', sans-serif !important;
 
 }
+
+body {
+  overflow-x: hidden;
+}
 :root {
   font-family: 'Inter', sans-serif !important;
   font-synthesis: none;
@@ -32,6 +36,27 @@
   padding: 16px 72px;
   border-radius: 10px;
   /* margin-top: 1rem; */
+}
+.about-header {
+  background-image:linear-gradient(263deg, #FA12E3 2%, #7612FA 54%, #12D0FA 100%);
+  max-width: 10ch;
+  font-size: 60px;
+  font-weight: 900;
+  text-align: center;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.improve-collab {
+  background-image: linear-gradient(258deg, #FA12E3 2%, #7612FA 54%, #12D0FA 100%);
+  font-size: 40px;
+  font-weight: 900;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.about-image {
+ 
 }
 
 
