--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   text-align: center;
   max-width: 11ch;
   line-height: 5rem;
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 
@@ -35,7 +36,7 @@ body {
   font-size: 23px;
   padding: 16px 72px;
   border-radius: 10px;
-  /* margin-top: 1rem; */
+  margin-top: 1rem;
 }
 .about-header {
   background-image:linear-gradient(263deg, #FA12E3 2%, #7612FA 54%, #12D0FA 100%);
@@ -43,6 +44,7 @@ body {
   font-size: 60px;
   font-weight: 900;
   text-align: center;
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -51,12 +53,21 @@ body {
   background-image: linear-gradient(258deg, #FA12E3 2%, #7612FA 54%, #12D0FA 100%);
   font-size: 40px;
   font-weight: 900;
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 }
 
-.about-image {
+.about-image-1 {
+  height: 550px;
+  width: 900px;
  
+}
+
+.companies-bg {
+  background-image: url('./assets/companies-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 
