--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,38 @@ body {
 }
 
 
+.bring-team-container {
+  position: relative;
+  width: 100%;
+  /* border: 2px solid red; */
+  height: 600px;
+  /* overflow-x: hidden; */
+}
+
+.circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 900px;
+  height: 900px;
+  background-image: url('../src/assets/bring-team.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  z-index: 5;
+}
+
+.content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url('../src/assets/bring-teams-bg.png');
+  background-repeat: repeat-x;
+
+}
+
+/* Additional styles for your content */
+
+
+
