--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,27 @@ body {
 
 }
 
+.bring-teams-text {
+  background-image:linear-gradient(14deg, #45C4F9 0%, navy 50%, #d30cbf 100%);
+    font-size: 60px;
+    font-weight: 900;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    max-width: 13ch;
+    text-align: center;
+    line-height: 4rem;
+}
+.bring-teams-button {
+  font-size: 17px;
+  font-weight: 700;
+  background: linear-gradient(236deg, #FA12E3 0%, #7612FA 41%, #12D0FA 100%);
+  padding: 18px 32px;
+  border-radius: 9px;
+  color: white;
+  width: 40%;
+}
+
 /* Additional styles for your content */
 
 
