--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ body {
     color: transparent;
     max-width: 13ch;
     text-align: center;
-    line-height: 4rem;
+    line-height: 4.5rem;
 }
 .bring-teams-button {
   font-size: 17px;
@@ -123,7 +123,68 @@ body {
   width: 40%;
 }
 
-/* Additional styles for your content */
+.tab-container header {
+  background-image:linear-gradient(14deg, #45C4F9 0%, navy 50%, #d30cbf 100%);
+  font-size: 60px;
+  font-weight: 900;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-align: center;
+  line-height: 4.5rem;
+}
+
+.tab-container .tabs .tab {
+  display: flex;
+  gap: .5rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  width: 187px;
+  border-radius: 9px;
+  border: 1px solid #ECECFC;
+  transition: all ease-out 150ms;
+}
+
+.tab-container .tabs .tab.active {
+    box-shadow: 10px 10px 40px  rgba(69, 163, 249, 0.10), 0 0 1px rgba(137, 32, 254, 0.65), -10px -10px 40px rgba(255, 11, 229, 0.10), 0 0 1px rgba(255, 200, 0, 0.80);
+}
+
+.tabs .tab span {
+  font-size: 16px;
+  font-weight: 500;
+   color:#514B81;
+}
+.tabs .tab.active span {
+  font-size: 17px;
+  font-weight: 600;
+   color:#292D34;
+}
+
+
+.tab-content {
+  min-height: 400px;
+
+}
+.tab-content .text{
+  flex: 0 0 60%;
+
+}
+.tab-content .solution{
+  flex: 0 0 40%;
+  background-color: #F8F8FC;
+
+}
+
+.solution-button {
+  background:linear-gradient(83deg, #45C4F9 0%, #7D09FF 46%, #FF0BE5 100%) ;
+  font-weight: 700;
+  border-radius: 9px;
+  color: white;
+  padding: 16px 38px;
+  width: 100%;
+}
 
 
 
