--- a/src/index.css
+++ b/src/index.css
@@ -197,5 +197,26 @@ body {
  
 }
 
+.all-teams header {
+  background-image:linear-gradient(14deg, #45C4F9 0%, navy 50%, #d30cbf 100%);
+  font-size: 60px;
+  font-weight: 900;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-align: center;
+  line-height: 4.5rem;
+  padding-block: 1.5rem;
+
+}
+.all-teams .rep-team .details {
+  background: linear-gradient(199deg, rgba(38, 171, 250, 1) 0%, rgba(118, 18, 250, 1) 52%);
+  width: 100%;
+  height: 230px;
+  border-top: 4px solid white;
+  transform: skewY(5deg);
+  transform-origin: top left;
+}
+
 
 
