--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -210,9 +214,9 @@ body {
 
 }
 .all-teams .rep-team .details {
-  background: linear-gradient(199deg, rgba(38, 171, 250, 0.8) 0%, rgba(118, 18, 250, 0.9) 52%);
+  background: linear-gradient(199deg, rgba(38, 171, 250, 0.8) 0%, rgba(118, 18, 250, 0.8) 52%);
   width: 100%;
-  height: 240px;
+  height: 305px;
   border-top: 4px solid white;
   transform: skewY(5deg);
   transform-origin: top left;
@@ -220,10 +224,30 @@ body {
   -webkit-backdrop-filter: blur(10px);
 }
 
-.details p {
-  background-color: red;
+.details .text-content {
   transform: skewY(-5deg);
+}
 
+.details .text-content .read-story {
+  display: flex;
+  width: 100%;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px); 
+  border: none;
+  font-weight: 500;
+  border-radius: 9px;
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 8px 20px;
+  transition: all 0.1s ease-in; 
+}
+
+.details .text-content .read-story:hover {
+  transform: translateY(2px);
 }
 
 
