--- a/src/index.css
+++ b/src/index.css
@@ -259,4 +259,17 @@ body {
     height: 180px;
 }
 
+.team-lookout header {
+  background-image:linear-gradient(14deg, #45C4F9 0%, navy 50%, #d30cbf 100%);
+  font-size: 60px;
+  font-weight: 900;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-align: center;
+  line-height: 4.5rem;
+  padding-block: 1.5rem;
+}
+
+
 
